@@ -2047,6 +2047,11 @@ class UsabilityTest(unittest.TestCase):
         self.assertIs(type(d), MyDecimal)
         self.assertEqual(d, d1)
 
+        a = Decimal('1.0')
+        b = MyDecimal(a)
+        self.assertIs(type(b), MyDecimal)
+        self.assertEqual(a, b)
+
     def test_implicit_context(self):
         Decimal = self.decimal.Decimal
         getcontext = self.decimal.getcontext
